Fix broken block mode, align cat photos, cleanup selectors

--- a/styles/index.css
+++ b/styles/index.css
@@ -67,7 +67,6 @@ header
 
 main
 {
-    width: 100%;
     margin: 15px 0;
     padding: 0 10px;
     text-align: center;
@@ -101,7 +100,7 @@ footer
 
 .cat
 {
-    display: inline-block;
+    display: block;
     box-sizing: border-box;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
 }
@@ -111,16 +110,49 @@ footer
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
 }
 
-.cat section
+.cat__info
 {
     text-align: left;
 }
 
+.cat__info-truncated
+{
+    max-height: 10.6rem;
+    line-height: 1.8rem;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    background-color: white;
+}
+
+.cat__info-truncated::before
+{
+    right: 0;
+    width: 25%;
+    top: 9rem;
+    display: block;
+    content: '\200C';
+    position: absolute;
+    text-align: center;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 50%);
+}
+
+.cat__photo-container
+{
+    position: relative;
+}
+
 .cat__photo
 {
+    top: 20px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: auto;
     height: 100%;
-    max-width: 100%;
-    object-fit: scale-down;
+    margin: auto;
+    max-width: 85%;
+    position: absolute;
 }
 
 .cat__name
@@ -162,30 +194,9 @@ footer
     text-decoration: line-through;
 }
 
-.truncated-content
-{
-    max-height: 10.7rem;
-    line-height: 1.8rem;
-    display: block;
-    overflow: hidden;
-    position: relative;
-    background-color: white;
-}
-
-.truncated-content::before
-{
-    right: 0;
-    width: 25%;
-    top: 9rem;
-    display: block;
-    content: '\200C';
-    position: absolute;
-    text-align: center;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 50%);
-}
-
 .cat__description
 {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    text-align: justify;
 }
