--- a/styles/settings.css
+++ b/styles/settings.css
@@ -46,34 +46,41 @@
 {
     width: 75%;
     height: 200px;
-    margin: 15px auto;
+    margin: 20px auto;
 }
 
-.input-view-list:checked ~ main .cat img,
-.input-view-list:checked ~ main .cat section
+.input-view-list:checked ~ main .cat__info,
+.input-view-list:checked ~ main .cat__photo-container
 {
     width: 30%;
     height: 90%;
-    margin: 10px;
     float: left;
 }
 
 .input-view-tiles:checked ~ main .cat
 {
-    float: left;
-    margin: 15px;
     width: 300px;
     height: 450px;
+    margin: 15px;
+    float: left;
 }
 
-.input-view-tiles:checked ~ main .cat img,
-.input-view-tiles:checked ~ main .cat section
+@media (max-width: 680px)
+{
+    .input-view-tiles:checked ~ main .cat
+    {
+        width: 90%;
+    }
+}
+
+.input-view-tiles:checked ~ main .cat__info,
+.input-view-tiles:checked ~ main .cat__photo-container
 {
     margin: 10px;
 }
 
-.input-view-tiles:checked ~ main .cat img
+.input-view-tiles:checked ~ main .cat__photo-container
 {
-    max-width: 90%;
-    height: 180px;
+    height: 40%;
+    margin-bottom: 20px;
 }
